# light-time-series-db

./: Cargo.toml  README.md
config/: default.toml
docs/draw/: light-tsdb.drawio
mem_col_store/: Cargo.toml
mem_col_store/src/: col_store.rs  errs.rs  lib.rs  search_based.rs
mem_col_store/src/col_tys/: mod.rs  str_col.rs  tag_col.rs  ts_col.rs  val_col.rs
query/: Cargo.toml
query/src/: aggs.rs  planner.rs  qry.rs
query/src/filters/: mod.rs  str_filter.rs
utils/src/: compose.rs  lib.rs
