[package]
name = "light-time-series-db"
version = "0.1.0"
edition = "2018"

[workspace] # In alphabetical order
members = [
    "mem_col_store"
]

[dependencies]
anyhow = "1.0"
crossbeam = "0.8.1"
chrono = "0.4.19"
mimalloc = { version = "0.1.26", default-features = false }
arrow = "5.0.0"
string-interner = "0.12.2"
internship = "0.6.0"
internment = "0.5.4"
