[package]
name = "mem_col_store"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
thiserror = "1.0"
color-eyre = "0.5.11"
tracing = "0.1.26"
tantivy = "0.15.3"
internment = {version = "0.5.4", features = ["tinyset", "arc"] }


