[package]
name = "query"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mem_col_store = { path = "../mem_col_store" }
utils = { path = "../utils" }
roaring = "0.7.0"
quickersort = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dynstack = "0.4.0"
either = "1.6.1"

[dev-dependencies]
rayon = "1.0"